--- a/scss/_o-tables.scss
+++ b/scss/_o-tables.scss
@@ -106,7 +106,7 @@
       .custom-control.custom-checkbox {
         padding-top: 0;
         padding-left: 1.25rem;
-        margin: 0;
+        margin-bottom: 0;
         vertical-align: middle;
       }
     }
